--- a/lessons/week_12/Wikipedia.ipynb
+++ b/lessons/week_12/Wikipedia.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Wikipedia.ipynb",
       "provenance": [],
       "toc_visible": true
     },
@@ -128,7 +127,7 @@
       },
       "source": [
         "# always check the current version in github\n",
-        "!pip install networkx==2.6.2"
+        "#!pip install networkx==2.6.3"
       ],
       "execution_count": null,
       "outputs": []
@@ -152,7 +151,8 @@
       "source": [
         "from operator import itemgetter\n",
         "import networkx as nx\n",
-        "import wikipedia"
+        "import wikipedia\n",
+        "import matplotlib.pyplot as plt"
       ],
       "execution_count": null,
       "outputs": []
@@ -216,11 +216,12 @@
         "which page is the next to be processed (an ordered lookup, *todo_lst*). \n",
         "\n",
         "\n",
-        "Snowballing an extensive network—and Wikipedia with 6,196,713 articles in\n",
+        "Snowballing an extensive network—and Wikipedia with 6,578,766 articles in\n",
         "the English segment alone can produce a huge network!—takes considerable\n",
         "time.\n",
         "\n",
-        "<img width=\"300\" src=\"https://drive.google.com/uc?export=view&id=1cOpkuhQEHJ3UxQOP3hoCd3KzSlqyf1AG\">\n",
+        "\n",
+        "<img width=\"300\" src=\"https://drive.google.com/uc?export=view&id=1nDQs0PYvVhHRLvfZ7rE7TEwzAF0pxMjk\">\n",
         "\n",
         "Suppose you start with one seed node, and let’s say it has $N\\approx 100$ neighbors.\n",
         "Each of them has $N$ neighbors, too, to the total of $\\approx N+N×N$ nodes. The\n",
@@ -305,8 +306,8 @@
         "  try:\n",
         "    wiki = wikipedia.page(page)\n",
         "  except:\n",
-        "    layer, page = todo_lst[0]\n",
         "    print(\"Could not load\", page)\n",
+        "    layer, page = todo_lst[0]\n",
         "    continue\n",
         "  \n",
         "  for link in wiki.links:\n",
@@ -458,9 +459,8 @@
         "You will discover a variety of network measures latter in this course. For now, let’s concentrate on a **node indegree**—the number of edges directed into the node. (In the same spirit, the number of edges directed out of the node is called **outdegree**.) The indegree of a node equals the number of HTML links pointing to the respective page. **If a page has a lot of links to it, the topic of the page must be significant.**\n",
         "\n",
         "\n",
-        "The choice of indegree as a yardstick of significance incidentally makes it\n",
-        "possible to shrink the graph size by almost 75 percent. The extracted graph\n",
-        "has 13,401 nodes and 24104 edges—an average of 1.79 edges per node. **Most\n",
+        "The extracted graph\n",
+        "has 13,526 nodes and 24,724 edges—an average of 1.82 edges per node. **Most\n",
         "of the nodes have only one connection**. (Interestingly, there are no isolated\n",
         "nodes with no connection in the graph. Even if they exist, you will not find\n",
         "them because of the way snowballing works.) **You can remove all nodes with\n",
@@ -526,9 +526,9 @@
         "id": "GD2AghG1eXMB"
       },
       "source": [
-        "print(\"Nodes removed: {:.2f}%\".format(100*(1 - 3195/13899)))\n",
-        "print(\"Edges removed: {:.2f}%\".format(100*(1 - 13899/24105)))\n",
-        "print(\"Edges per nodes: {:.2f}\".format(13899/3195))"
+        "print(\"Nodes removed: {:.2f}%\".format(100*(1 - 3296/13526)))\n",
+        "print(\"Edges removed: {:.2f}%\".format(100*(1 - 14494/24724)))\n",
+        "print(\"Edges per nodes: {:.2f}\".format(13526/3296))"
       ],
       "execution_count": null,
       "outputs": []
@@ -539,9 +539,9 @@
         "id": "YSELbSFCX__7"
       },
       "source": [
-        "As you can see, the following code fragment safely removes 77 percent of the\n",
-        "nodes and 42 percent of the edges, raising the average number of edges per\n",
-        "node to 4.35."
+        "As you can see, the following code fragment safely removes 75 percent of the\n",
+        "nodes and 41 percent of the edges, raising the average number of edges per\n",
+        "node to 4.10."
       ]
     },
     {
@@ -612,7 +612,7 @@
         "  - https://en.wikipedia.org/wiki/Federal_University_of_Rio_Grande_do_Norte\n",
         "  - https://en.wikipedia.org/wiki/Petrobras\n",
         "  - https://en.wikipedia.org/wiki/List_of_presidents_of_Brazil\n",
-        "- Explore some metrics studied in Unit 01 to highlight insights in your analysis."
+        "- Explore some metrics studied in Unit 02 to highlight insights in your analysis."
       ]
     },
     {
