--- a/lessons/week_08/exercise.ipynb
+++ b/lessons/week_08/exercise.ipynb
@@ -5,18 +5,10 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "QPVskC76LUtF",
-        "ZT5mLS7-Lsb2",
-        "4-bIhQwpMVs3",
-        "S4Ga_yyYNBBo",
         "hct-5tQwNg5_",
         "--K9oj5YNrjz",
-        "cER1jb6SN8NF",
-        "RN4CfOSqOK_1",
-        "SKKotfslOluz",
         "N92A04bZP6Uu",
         "hzp00QnjRgxU",
-        "7if-CnFwSfPc",
         "TcYdyCnEmgnD",
         "MCDbNldnmgnD"
       ]
@@ -93,7 +85,7 @@
       },
       "source": [
         "\n",
-        "<center><img width=\"600\" src=\"https://drive.google.com/uc?export=view&id=1Y42-c3Pq1XoszEEvYsZFdr3GccAqp7l_\"></center>\n",
+        "<center><img width=\"600\" src=\"https://media.cheggcdn.com/comis/7d3/7d380a8d-4cda-49d3-9edb-a3a2358b773e/769351-0-1IE1.png\"></center>\n",
         "<center><b>Figure 1</b>: Map of New York in 1880. From Report on the Social Statistics of Cities, Compiled by George E. Waring, Jr., U.S. Census Office, 1886. Image courtesy of University of Texas Libraries. <br></center>\n",
         "\n",
         "\n",
@@ -450,7 +442,7 @@
       "source": [
         "Consider this adjacency matrix:\n",
         "\n",
-        "<center><img width=\"300\" src=\"https://drive.google.com/uc?export=view&id=1e4ANqX_kJCPhnVizvbK-ToBJgrZJpVde\"></center>\n",
+        "<center><img width=\"300\" src=\"https://drive.google.com/uc?export=view&id=1WV859Q4czNQVJZXt704XFVqL3_6qwIkG\"></center>\n",
         "\n",
         "An entry in the ith row and jth column indicates the weight of the link from node i to node j. For instance, the entry in the second row and third column is 2, meaning the weight of the link from node B to node C is 2. What kind of network does this matrix represent?\n",
         "1.   Undirected, unweighted\n",
