--- a/lessons/week02/lesson03.ipynb
+++ b/lessons/week02/lesson03.ipynb
@@ -15,6 +15,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Part 1"
+      ],
+      "metadata": {
+        "id": "o5NjK5PE2wZW"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -549,6 +558,353 @@
       ],
       "metadata": {
         "id": "Z7a7JO7VrIKe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Part 2"
+      ],
+      "metadata": {
+        "id": "t9MALrKf2yiS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Density"
+      ],
+      "metadata": {
+        "id": "ojigl1Kz9BLU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import networkx as nx\n",
+        "import gzip\n",
+        "import urllib.request\n",
+        "\n",
+        "# URL of the dataset (compressed file of Enron email network)\n",
+        "url = \"https://snap.stanford.edu/data/email-Enron.txt.gz\"\n",
+        "filename = \"email-Enron.txt.gz\"\n",
+        "\n",
+        "# Download the file from the URL\n",
+        "urllib.request.urlretrieve(url, filename)"
+      ],
+      "metadata": {
+        "id": "sOE-b1Bs25tO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an undirected graph\n",
+        "G = nx.Graph()\n",
+        "\n",
+        "# Open and read the compressed file line by line\n",
+        "with gzip.open(filename, 'rt') as f:\n",
+        "    for line in f:\n",
+        "        if line.startswith(\"#\"):\n",
+        "            continue  # Skip comment lines\n",
+        "        src, dst = map(int, line.strip().split())  # Extract source and destination node IDs\n",
+        "        G.add_edge(src, dst)  # Add an undirected edge between the nodes"
+      ],
+      "metadata": {
+        "id": "sOsxZGk23GII"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate number of nodes (vertices)\n",
+        "num_nodes = G.number_of_nodes()\n",
+        "\n",
+        "# Calculate number of edges (links)\n",
+        "num_edges = G.number_of_edges()\n",
+        "\n",
+        "# Calculate network density\n",
+        "density = nx.density(G)\n",
+        "\n",
+        "manual_density = 2 * num_edges / (num_nodes * (num_nodes - 1))\n",
+        "\n",
+        "# Print basic network statistics\n",
+        "print(f\"Number of nodes: {num_nodes}\")\n",
+        "print(f\"Number of edges: {num_edges}\")\n",
+        "print(f\"Network density: {density:.6f}\")\n",
+        "print(f\"Network density calc: {manual_density:.6f}\")"
+      ],
+      "metadata": {
+        "id": "-wIsA0CC3aln"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Subgraph"
+      ],
+      "metadata": {
+        "id": "L7ecbHr79DUi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import networkx as nx\n",
+        "import gzip\n",
+        "import urllib.request\n",
+        "import random\n",
+        "\n",
+        "# Step 1: Download the citation network dataset\n",
+        "url = \"https://snap.stanford.edu/data/cit-Patents.txt.gz\"\n",
+        "filename = \"cit-Patents.txt.gz\"\n",
+        "urllib.request.urlretrieve(url, filename)"
+      ],
+      "metadata": {
+        "id": "kYr5Humm3oYT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 2: Create a directed graph and load data\n",
+        "G = nx.DiGraph()\n",
+        "with gzip.open(filename, 'rt') as f:\n",
+        "    for line in f:\n",
+        "        if line.startswith(\"#\"):\n",
+        "            continue  # Skip comment lines\n",
+        "        src, dst = map(int, line.strip().split())\n",
+        "        G.add_edge(src, dst)"
+      ],
+      "metadata": {
+        "id": "1DrgheoP9Ezy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Full graph: {G.number_of_nodes()} nodes,{G.number_of_edges()} edges, {nx.density(G)}\")"
+      ],
+      "metadata": {
+        "id": "9uatcgII-np0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 3: Randomly sample 10% of the nodes\n",
+        "num_sample = int(0.10 * G.number_of_nodes())\n",
+        "sample_nodes = random.sample(list(G.nodes()), num_sample)\n",
+        "\n",
+        "# Step 4: Create the subgraph induced by the sampled nodes\n",
+        "subG = G.subgraph(sample_nodes)"
+      ],
+      "metadata": {
+        "id": "JgHWu3YB9Ivy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 5: Compute and print basic metrics\n",
+        "print(f\"\\nSampled subgraph (10% of nodes):\")\n",
+        "print(f\"Nodes: {subG.number_of_nodes()}\")\n",
+        "print(f\"Edges: {subG.number_of_edges()}\")\n",
+        "print(f\"Density: {nx.density(subG):.6f}\")"
+      ],
+      "metadata": {
+        "id": "s55Htcam-rJ2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Degree"
+      ],
+      "metadata": {
+        "id": "cci-WJHpn1fC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import networkx as nx\n",
+        "import urllib.request\n",
+        "import zipfile\n",
+        "import os\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "from collections import Counter\n",
+        "\n",
+        "\n",
+        "# Step 1: Download and unzip the dataset\n",
+        "url = \"https://snap.stanford.edu/data/twitch_gamers.zip\"\n",
+        "zip_filename = \"twitch_gamers.zip\"\n",
+        "urllib.request.urlretrieve(url, zip_filename)"
+      ],
+      "metadata": {
+        "id": "jT6BSqLYn2Z-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 2: Extract the ZIP file\n",
+        "with zipfile.ZipFile(zip_filename, 'r') as zip_ref:\n",
+        "    zip_ref.extractall(\"twitch_data\")\n",
+        "\n",
+        "# Step 3: Load the edge list from CSV using pandas\n",
+        "edge_file = \"twitch_data/large_twitch_edges.csv\"\n",
+        "df = pd.read_csv(edge_file)\n",
+        "\n",
+        "# Step 4: Create an undirected graph from the edge list\n",
+        "G = nx.from_pandas_edgelist(df, source='numeric_id_1',\n",
+        "                            target='numeric_id_2')\n",
+        "\n",
+        "# Step 5: Print basic info\n",
+        "print(f\"Number of nodes: {G.number_of_nodes()}\")\n",
+        "print(f\"Number of edges: {G.number_of_edges()}\")"
+      ],
+      "metadata": {
+        "id": "gr9vmSKTpM1s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 4: Compute degrees\n",
+        "degrees = [deg for node, deg in G.degree()]\n",
+        "\n",
+        "# Step 5: Show degree statistics\n",
+        "print(f\"Max degree: {max(degrees)}\")\n",
+        "print(f\"Average degree: {sum(degrees)/len(degrees):.2f}\")\n",
+        "print(f\"Average degree alternative: {nx.density(G)*(G.number_of_nodes()-1):.2f}\")"
+      ],
+      "metadata": {
+        "id": "GYUrbf-Cpdkp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set a clean, minimalist style\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "sns.set_style(\"whitegrid\")\n",
+        "\n",
+        "# Plot histogram with soft color and clear edges\n",
+        "plt.hist(degrees, bins=50, color=\"#4C72B0\", edgecolor='white', alpha=0.85)\n",
+        "\n",
+        "# Titles with hierarchy and clarity\n",
+        "plt.title(\"Node Degree Distribution in Twitch Gamer Network\", fontsize=16, weight='bold')\n",
+        "plt.xlabel(\"Degree\", fontsize=14)\n",
+        "plt.ylabel(\"Number of Nodes\", fontsize=14)\n",
+        "\n",
+        "# Reduce ticks clutter and highlight major ones\n",
+        "plt.xticks(fontsize=12)\n",
+        "plt.yticks(fontsize=12)\n",
+        "\n",
+        "# Remove top/right borders to reduce distraction\n",
+        "sns.despine()\n",
+        "\n",
+        "# Add grid only on y-axis to improve readability\n",
+        "plt.grid(axis='y', linestyle='--', linewidth=0.5, alpha=0.7)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "vblpYxqrsaOj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Count the frequency of each degree\n",
+        "degree_count = Counter(degrees)\n",
+        "\n",
+        "# Sort by degree (optional, for readability)\n",
+        "sorted_degree_count = dict(sorted(degree_count.items()))\n",
+        "\n",
+        "# Print the histogram values\n",
+        "print(\"Degree\\tNumber of Nodes\")\n",
+        "for degree, count in sorted_degree_count.items():\n",
+        "    print(f\"{degree}\\t{count}\")"
+      ],
+      "metadata": {
+        "id": "v0nMlWDnsg1l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Filter degrees up to 200\n",
+        "filtered_degrees = [d for d in degrees if d <= 200]\n",
+        "\n",
+        "# Plot the histogram\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "sns.set_style(\"whitegrid\")\n",
+        "\n",
+        "plt.hist(filtered_degrees, bins=50, color=\"#4C72B0\", edgecolor='white', alpha=0.85)\n",
+        "\n",
+        "plt.title(\"Degree Distribution (Nodes with Degree ≤ 200)\", fontsize=16, weight='bold')\n",
+        "plt.xlabel(\"Degree\", fontsize=14)\n",
+        "plt.ylabel(\"Number of Nodes\", fontsize=14)\n",
+        "\n",
+        "plt.xticks(fontsize=12)\n",
+        "plt.yticks(fontsize=12)\n",
+        "sns.despine()\n",
+        "plt.grid(axis='y', linestyle='--', linewidth=0.5, alpha=0.7)\n",
+        "plt.tight_layout()\n",
+        "\n",
+        "# Save figure with transparent background and high resolution\n",
+        "plt.savefig(\"degree_histogram.png\", dpi=300, transparent=True, bbox_inches='tight')\n",
+        "\n",
+        "# Optional: Show plot after saving\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Xgo_-JgNtL-a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3wgL3Tnot36r"
       },
       "execution_count": null,
       "outputs": []
